Updated react-image-gallery to latest.  Fixed next.js hydration error with <html> tag.  Fixed image gallery z-index.  Fixed ts-particles async issue.  Fixed build errors.

--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -83,4 +83,5 @@
 /* Apply transparent background in fullscreen mode */
 .image-gallery.fullscreen-modal {
 	background-color: rgba(0, 0, 0, 0.8) !important;
+	z-index: 10 !important;
 }
